# sky_watch

./: .gitignore  Cargo.toml  README.md
crop_image/: Cargo.toml
crop_image/src/: main.rs
csv_writer/: Cargo.toml
csv_writer/src/: main.rs
fetch_weather/: Cargo.toml  data.csv
fetch_weather/src/: main.rs
gphoto_cam/: Cargo.toml  deploy.sh
gphoto_cam/src/: main.rs
interval_data_cam/: Cargo.toml
interval_data_cam/src/: main.rs
one_photo/: Cargo.toml
one_photo/src/: main.rs
process_sky_images/: Cargo.toml  image.csv
process_sky_images/data/: data.csv
process_sky_images/src/: main.rs
process_sky_images_to_tiles/data/downsized/: "DSC01024.JPG"  "DSC01025.JPG"  "DSC01026.JPG"  "DSC01027.JPG"  "DSC01028.JPG"  "DSC01029.JPG"  "DSC01030.JPG"  "DSC01031.JPG"  "DSC01032.JPG"  "DSC01033.JPG"  "DSC01034.JPG"  "DSC01035.JPG"  "DSC01036.JPG"  "DSC01037.JPG"  "DSC01038.JPG"  "DSC01039.JPG"  "DSC01040.JPG"  "DSC01041.JPG"  "DSC01042.JPG"  "DSC01043.JPG"  "DSC01044.JPG"  "DSC01045.JPG"  "DSC01046.JPG"  "DSC01047.JPG"  "DSC01048.JPG"  "DSC01049.JPG"  "DSC01050.JPG"  "DSC01051.JPG"  "DSC01052.JPG"  "DSC01053.JPG"  "DSC01054.JPG"  "DSC01055.JPG"  "DSC01056.JPG"  "DSC01057.JPG"  "DSC01058.JPG"  "DSC01059.JPG"  "DSC01060.JPG"  "DSC01061.JPG"  "DSC01062.JPG"  "DSC01063.JPG"  (+76 more)
process_sky_images_to_tiles/src/: main.rs
sky_watcher/: Cargo.toml
sky_watcher/src/: main.rs
src/: main.rs
watcher/: Cargo.toml
